Made Css for login page

--- a/brickbreaker/pongchilling/templates/Login.html
+++ b/brickbreaker/pongchilling/templates/Login.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-        <form action="Page1">
-            <input type="text" name="userName" placeholder="Nom d'utilisateur">
-            <input type="password" name="password" placeholder="Mot de passe">
-            <button type="submit">Valider</button>
-        </form>
+        <img src="../static/Images/brickBeaker_Logo.png" alt="">
+        <div class="loginForm">
+            <form action="None">
+                <div class="paddleInput">
+                    <input type="text" name="userName" placeholder="Nom d'utilisateur">
+                </div>
+                <div class="paddleInput">
+                    <input type="password" name="password" placeholder="Mot de passe">
+                </div>
+                <button type="submit" class="brickValidation">Valider</button>
+            </form>
+        </div>
     </body>
 </html>
