--- a/brickbreaker/pongchilling/templates/Login.html
+++ b/brickbreaker/pongchilling/templates/Login.html
@@ -6,7 +6,7 @@
     <body>
         <img src="../static/Images/brickBeaker_Logo.png" alt="">
         <div class="loginForm">
-            <form action="None">
+            <form action="index">
                 <div class="paddleInput">
                     <input type="text" name="userName" placeholder="Nom d'utilisateur">
                 </div>
