--- a/brickbreaker/pongchilling/templates/Login.html
+++ b/brickbreaker/pongchilling/templates/Login.html
@@ -19,12 +19,14 @@
             </form>
         </div>
         {% else %}
-            <div class="LoginForm">
+            <div class="loginForm">
                 <form action="index" method="POST">
                     {% csrf_token %}
-                    <p>Voulez vous creer un compte ?</p>
-                    <button type="submit" name="oui">Oui</button>
-                    <button type="submit" name="non">Non</button>
+                    <div class="paddleInput">
+                        <span>Voulez-vous creez un compte ?</span>
+                    </div>
+                    <button type="submit" name="oui" class="brickValidation">Oui</button>
+                    <button type="submit" name="non" class="brickValidatioNon">Non</button>
                 </form>
             </div>
         {%endif%}
