--- a/brickbreaker/pongchilling/templates/Login.html
+++ b/brickbreaker/pongchilling/templates/Login.html
@@ -18,6 +18,9 @@
                 <button type="submit" class="brickValidation">Valider</button>
             </form>
         </div>
+        {% if passError == True %}
+        <p> Mot de pass erroné</p>
+        {% endif%}
         {% else %}
             <div class="LoginForm">
                 <form action="index" method="POST">
