--- a/brickbreaker/pongchilling/templates/Login.html
+++ b/brickbreaker/pongchilling/templates/Login.html
@@ -29,7 +29,7 @@
                         <span>Voulez-vous creez un compte ?</span>
                     </div>
                     <button type="submit" name="oui" class="brickValidation">Oui</button>
-                    <button type="submit" name="non" class="brickValidatioNon">Non</button>
+                    <button type="submit" name="non" class="brickValidationNon">Non</button>
                 </form>
             </div>
         {%endif%}
