--- a/brickbreaker/pongchilling/static/css/style.css
+++ b/brickbreaker/pongchilling/static/css/style.css
@@ -54,6 +54,20 @@ body img
     width: 210px;
     display: flex;
     align-content: center;
+    justify-content: center;
+    
+}
+
+.paddleInput span
+{
+    background-color:rgba(240, 248, 255, 0);
+    border-style: none;
+    color: white;
+    text-align: center;
+    width:inherit;
+    font-weight: bolder;
+    align-self: center;
+    width: 57.8%;
     
 }
 
@@ -73,4 +87,21 @@ body img
 .brickValidation:active
 {
     background-image: url("../Images/brickBreaker_blueBrick_damaged.png");
+}
+
+.brickValidationNon
+{
+    background-image: url("../Images/brickBreaker_redBrick.png");
+    width: 170px;
+    height: 57px;
+    background-color:rgba(240, 248, 255, 0);
+    border-style: none;
+    color: white;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.brickValidationNon:active
+{
+    background-image: url("../Images/brickBreaker_redBrick_damaged.png");
 }
